fix(Fieldset): increase spacing

--- a/designsystem/fieldset/fieldset.module.css
+++ b/designsystem/fieldset/fieldset.module.css
@@ -4,7 +4,7 @@
 
 		/* Reset designsystemet */
 		& > * {
-			margin-top: var(--ds-size-2);
+			margin-top: var(--ds-size-3);
 		}
 		& > legend,
 		& > legend + p {
